# nami-fax

./: .bowerrc  .gitignore  LICENSE  MANIFEST.in  README.md  README.txt  bower.json  development.ini  package.json  production.ini  pytest.ini  requirements.txt  setting.yaml  setup.cfg  testing.ini
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_static/: documentation_options.js
docs/contents/hylafax/: index.rst
docs/contents/namifax/: index.rst
minafax/alembic/: env.py
minafax/templates/: layout.jinja2
minafax/views/: default.py  notfound.py
namifax/: __init__.py  nami.py  routes.py  routes_admin.py
namifax/alembic/: env.py
namifax/alembic/versions/: 20220410_2ca956711e26.py  20220419_76935e9826d8.py
namifax/lib/: __init__.py  classes.py  config.py  constant.py
namifax/locale/: namifax.pot
namifax/locale/ar/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/bg/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/de/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/el/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/en/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/es/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/fr/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/hu/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/it/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/ja/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/ko/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/nl/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/no/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/pl/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/pt_br/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/pt_pt/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/ru/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/si/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/sv/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/tr/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/zh/LC_MESSAGES/: namifax.mo  namifax.po
namifax/locale/zh_tw/LC_MESSAGES/: namifax.mo  namifax.po
namifax/models/: __init__.py  addressbook.py  addressbookemail.py  addressbookfax.py  barcoderoute.py  coverpages.py  didroute.py  distrolist.py  dynconf.py  faxarchive.py  faxcategory.py  modems.py  syslog.py  useraccount.py  userpasswords.py
namifax/scripts/: avantfaxcron.py  faxrcvd.py  initialize_db.py  initialize_namifax.py
namifax/static/namifax/: main.js
namifax/templates/: layout.jinja2  main_page.html  mytemplate.jinja2
namifax/templates/admin/: index.jinja2
namifax/views/: default.py  notfound.py
namifax/views/admin/: admin.py
tests/: conftest.py  test_functional.py  test_views.py
