[metadata]
name = minafax
version = 0.0

[options]
keywords = web pyramid pylons
description = Mina Fax,
long_description = file: README.txt, CHANGES.txt
author = Lee Ji-Ho
author_email = search5@gmail.com
packages = find:
include_package_data = True
zip_safe = False
url = https://github.com/search5/nami-fax
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
install_requires =
    plaster_pastedeploy
    pyramid
    pyramid_jinja2
    pyramid_debugtoolbar
    waitress
    alembic
    pyramid_retry
    pyramid_tm
    SQLAlchemy
    transaction
    zope.sqlalchemy

[options.packages.find]
exclude =
    tests

[options.entry_points]
paste.app_factory =
    main = minafax:main
console_scripts =
    initialize_minafax_db = minafax.scripts.initialize_db:main

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-cov
