[metadata]
name = namifax
version = 0.0
keywords = Hylafax Web Frontend
description = Opensource Nami-FAX
long_description = file: README.rst, CHANGES.rst
author = Lee Ji-Ho
author_email = search5@gmail.com
license_files = LICENSE
url = https://github.com/search5/namifax
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    plaster_pastedeploy
    pyramid
    pyramid_jinja2
    pyramid_debugtoolbar
    waitress
    alembic
    pyramid_retry
    pyramid_tm
    SQLAlchemy
    transaction
    zope.sqlalchemy
    sphinx

[options.packages.find]
exclude =
    tests

[options.entry_points]
paste.app_factory =
    main = namifax:main
console_scripts =
    initialize_namifax_db = namifax.scripts.initialize_db:main

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-cov
