[metadata]
name = namifax
version = 0.0
keywords = Hylafax Web Frontend
description = Opensource Nami-FAX
long_description = file: README.rst, CHANGES.rst
author = Lee Ji-Ho
author_email = search5@gmail.com
license_files = LICENSE
url = https://github.com/search5/namifax
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    plaster_pastedeploy
    pyramid
    pyramid_jinja2
    pyramid_debugtoolbar
    waitress
    alembic
    pyramid_retry
    pyramid_tm
    SQLAlchemy
    transaction
    zope.sqlalchemy
    sphinx
    pyramid-jwt
    pg8000
    bcrypt
    pyyaml
    click

[options.packages.find]
exclude =
    tests

[options.entry_points]
paste.app_factory =
    main = namifax:main
console_scripts =
    initialize_namifax_db = namifax.scripts.initialize_db:main
    initialize_namifax = namifax.scripts.initialize_namifax:main
    avantfaxcron = namifax.scripts.avantfaxcron:main
    create_thumbnails = namifax.scripts.create_thumbnails:main
    dynconf = namifax.scripts.dynconf:main
    faxcover = namifax.scripts.faxcover:main
    faxrcvd = namifax.scripts.faxrcvd:main
    import_archive = namifax.scripts.import_archive:main
    import_blacklist = namifax.scripts.import_blacklist:main
    import_users = namifax.scripts.import_users:main
    notify = namifax.scripts.notify:main
    ocr_import = namifax.scripts.ocr_import:main
    reroute = namifax.scripts.reroute:main
    update_contacts = namifax.scripts.update_contacts:main

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-cov
